# rsbackup

./: Cargo.toml  README-en.md  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  util.rs
src/storage/: cloud.rs  local.rs  mod.rs
